Fixed expander z-index

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ input:active {
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 13%);
     display: none;
     animation: slide-down 2s;
-    z-index: -1;
+    z-index: 0;
     position: relative;
     overflow-y: hidden;
 }
